--- a/Lab 4/style.css
+++ b/Lab 4/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 h1 {
   word-spacing: 10px;
   letter-spacing: 3px;
@@ -10,24 +14,12 @@ h1 {
 }
 
 body {
-  margin: 25px;
+  margin: 50px;
   font: 15px arial, sans-serif;
-  background-color: #fefbd8;
-  background: -webkit-linear-gradient(top, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%);
-}
-
-img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-}
-
-img:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 0, 186, 0.5);
+  background-color: white;
 }
 
 ol {
-  padding: 2px;
   background-color: black;
   padding: 24px;
 }
@@ -41,8 +33,9 @@ ol li {
 
 .column {
   float: left;
-  width: 40%;
-  padding: 15px;
+  width: 50%;
+  padding: 10px;
+  height: 300px;
 }
 
 .row:after {
